# BaumanCV

./: .gitignore  CMakeLists.txt  Makefile  README.md  TEST.md  TODO.md  build.sh  test.sh  коэффицент.txt
3dmodel/: CVR_v0.1.a3d  base.m3d  base.m3d.bak  rasberrypi2modelb_lite_model.m3d  rasberrypicamera_lite_model.m3d
info/: README.md
project/MyTest/: CPUTime.cpp  CPUTime.h  MyTest.cpp  MyTest.h  STime.cpp  STime.h  test_obj.h  test_result.cpp  test_result.h
project/include/: CPUTime.h  CV_two_array.h  Mat.h  SMatrix.h  correlation.h  grfmt_base.hpp  ptr.h  rangefinder.cpp  rangefinder.h  test.h  two_array.h  utils.h
project/include/CV/: BaseImageDecoder.h  Enum_status.h  ExifEntry.h  Mat.h  Matx.h  Ptr.h  Scalar.h  Size.h  Size_validateInputImageSize.h  UMat.h  Vec.h  all_in.h  uchar_in_typedef.h
project/src/: CPUTime.cpp  Mat.cpp  grfmt_base.cpp  main.cpp  ptr.cpp  rangefinder.cpp  test.cpp  utils.cpp
